# OI-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh  setup_repo.sh
config/: default.yaml  development.yaml  production.yaml
data/: .gitignore
src/: cli.py
src/scraper/: __init__.py  config.py  constants.py  exceptions.py  main.py  types.py
src/scraper/extractors/: __init__.py  browser_pool.py  request_manager.py  selenium_client.py
src/scraper/parsers/: __init__.py  base_parser.py  data_cleaner.py  table_parser.py  trade_parser.py
src/scraper/storage/: __init__.py  database.py  models.py  query_builder.py  schema.py
src/scraper/utils/: __init__.py  concurrency.py  hash.py  logging.py  validation.py
